--- a/public/chat.html
+++ b/public/chat.html
@@ -4,9 +4,6 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="styles/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="styles/styles-shared.css">
-    <link rel="stylesheet" type="text/css" href="styles/chat.css">
     <title>Sala de chat</title>
   </head>
   <body>
@@ -114,8 +111,6 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
 	<script type="text/javascript" src="socket.io/socket.io.js"></script>
-	<script type="text/javascript" src="./styles/effect-border.js"></script>
-	<script type="text/javascript" src="./js/ui.js"></script>
-	<script type="text/javascript" src="./js/chat.socket.js"></script>
+	<script type="text/javascript" src="dist/chat.bundle.js"></script>
   </body>
 </html>
