--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,6 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="styles/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="styles/index.css">
-    <link rel="stylesheet" type="text/css" href="styles/styles-shared.css">
     <title>Chat</title>
   </head>
   <body class="d-flex justify-content-center align-items-center">
@@ -28,7 +25,7 @@
 		</form>
 	</div>
 	
-	<script type="text/javascript" src="./styles/effect-border.js"></script>
+	<script type="text/javascript" src="dist/index.bundle.js"></script>
 
   </body>
 </html>
